--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,9 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "express-validator": "^7.0.1",
