--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
+    "dom": "^0.0.3",
     "js-cookie": "^3.0.5",
     "reacr": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-router": "^6.21.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
